--- a/pom.xml
+++ b/pom.xml
@@ -106,12 +106,12 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>3.23.1</version>
-            <scope>test</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.assertj</groupId>-->
+<!--            <artifactId>assertj-core</artifactId>-->
+<!--            <version>3.23.1</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
 
 
         <!--        <dependency>-->
