--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/password_words
-spring.datasource.username = root
+spring.datasource.url = jdbc:postgresql://localhost:5432/password_generator
+spring.datasource.username = postgres
 spring.datasource.password = postgres
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-
-spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto = update
 
-#management.endpoints.web.exposure.include = health, info, copyright
-#management.endpoint.health.show-details = ALWAYS
+management.endpoints.web.exposure.include = health, info, copyright
+management.endpoint.health.show-details = ALWAYS
+spring.jackson.property-naming-strategy = SNAKE_CASE
+
+#Location of characters properties
+chars.properties.file-location = src/main/resources/config.properties
