--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/password_generator
+spring.datasource.url = jdbc:h2:file:./src/main/resources/db.data/word_db
 spring.datasource.username = postgres
 spring.datasource.password = postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto = update
 
 management.endpoints.web.exposure.include = health, info, copyright
@@ -10,3 +10,5 @@ spring.jackson.property-naming-strategy = SNAKE_CASE
 
 #Location of characters properties
 chars.properties.file-location = src/main/resources/config.properties
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
