--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ management.endpoint.health.show-details = ALWAYS
 spring.jackson.property-naming-strategy = SNAKE_CASE
 
 #Location of characters properties
-chars.properties.file-location = src/main/resources/config.properties
+chars.properties.file-location = classpath:config.properties
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
