--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,18 @@
             <version>3.0.1</version>
             <scope>test</scope>
         </dependency>
+        <!--        Redis Cache    -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>3.0.6</version>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>5.0.0-alpha2</version>
+            <type>jar</type>
+        </dependency>
         <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-actuator</artifactId>
