--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,11 @@ spring.jackson.property-naming-strategy = SNAKE_CASE
 chars.properties.file-location = classpath:config.properties
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.cache.type=redis
+spring.redis.host=${HOST_NAME_REDIS}
+spring.redis.port=6379
+spring.cache.redis.time-to-live=5000000
+spring.cache.redis.cache-null-values=false
+spring.cache.redis.use-key-prefix=true
+spring.cache.redis.key-prefix=My Cache:
