--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,17 @@
-spring.datasource.url = jdbc:h2:file:./src/main/resources/db.data/word_db
-spring.datasource.username = postgres
-spring.datasource.password = postgres
-spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto = update
+
+#spring.datasource.url = jdbc:h2:file:./src/main/resources/db.data/word_db
+#spring.datasource.username = postgres
+#spring.datasource.password = postgres
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.datasource.url = jdbc:postgresql://dpg-cie0mcl9aq0ce398i3ng-a.frankfurt-postgres.render.com/words_db_iim7
+spring.datasource.username = words_db_iim7_user
+spring.datasource.password = x8LRdHSrLk2Jr03ezMRAPqedFWMKVdgD
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 
 management.endpoints.web.exposure.include = health, info, copyright
 management.endpoint.health.show-details = ALWAYS
@@ -11,12 +20,15 @@ spring.jackson.property-naming-strategy = SNAKE_CASE
 #Location of characters properties
 chars.properties.file-location = classpath:config.properties
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+csv.file.path= words.csv
+
+
 
 spring.cache.type=redis
-spring.redis.host=${HOST_NAME_REDIS}
+spring.cache.redis.cache-null-values=true
+spring.redis.host=red-ci05u7d269v5qbl54s5g
+#spring.redis.host=127.0.0.1
 spring.redis.port=6379
-spring.cache.redis.time-to-live=5000000
-spring.cache.redis.cache-null-values=false
-spring.cache.redis.use-key-prefix=true
-spring.cache.redis.key-prefix=My Cache:
+spring.cache.redis.time-to-live=60000
+#spring.cache.redis.use-key-prefix=true
+spring.cache.cache-names=word
