--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,17 @@
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 
 #spring.datasource.url = jdbc:h2:file:./src/main/resources/db.data/word_db
 #spring.datasource.username = postgres
 #spring.datasource.password = postgres
 #spring.datasource.driver-class-name=org.h2.Driver
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 
-spring.datasource.url = jdbc:postgresql://dpg-cie0mcl9aq0ce398i3ng-a.frankfurt-postgres.render.com/words_db_iim7
-spring.datasource.username = words_db_iim7_user
-spring.datasource.password = x8LRdHSrLk2Jr03ezMRAPqedFWMKVdgD
+spring.datasource.url = jdbc:postgresql://dpg-cinp3bl9aq06u3iq6aog-a/password_generator_db_0yfr
+#spring.datasource.url = jdbc:postgresql://dpg-cin9bpdgkuvvgndralgg-a.ohio-postgres.render.com/password_generator_db
+spring.datasource.username = password_generator_db_0yfr_user
+spring.datasource.password = 9N0dqq6cvTuTKpK48oOhvLBjQvt1xcvm
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
