Db internal url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,14 +8,15 @@ spring.jpa.hibernate.ddl-auto = create-drop
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
 
-spring.datasource.url = postgres://password_generator_db_0yfr_user:9N0dqq6cvTuTKpK48oOhvLBjQvt1xcvm@dpg-cinp3bl9aq06u3iq6aog-a/password_generator_db_0yfr
-#spring.datasource.url = jdbc:postgresql://dpg-cinp3bl9aq06u3iq6aog-a/password_generator_db_0yfr:5432
+#spring.datasource.url = postgres://password_generator_db_0yfr_user:9N0dqq6cvTuTKpK48oOhvLBjQvt1xcvm@dpg-cinp3bl9aq06u3iq6aog-a/password_generator_db_0yfr
+spring.datasource.url = jdbc:postgresql://dpg-cinp3bl9aq06u3iq6aog-a:5432/password_generator_db_0yfr
 #spring.datasource.url = jdbc:postgresql://dpg-cin9bpdgkuvvgndralgg-a.ohio-postgres.render.com/password_generator_db
 spring.datasource.username = password_generator_db_0yfr_user
 
 spring.datasource.password = 9N0dqq6cvTuTKpK48oOhvLBjQvt1xcvm
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
 
 
 management.endpoints.web.exposure.include = health, info, copyright
