--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,23 @@
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 spring.flyway.baseline-on-migrate = true
 
-#spring.datasource.url = jdbc:h2:file:./src/main/resources/db.data/word_db
-#spring.datasource.username = postgres
-#spring.datasource.password = postgres
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
+spring.datasource.url = jdbc:h2:file:./src/main/resources/db.data/word_db
+spring.datasource.username = postgres
+spring.datasource.password = postgres
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 #spring.datasource.url = postgres://password_generator_db_0yfr_user:9N0dqq6cvTuTKpK48oOhvLBjQvt1xcvm@dpg-cinp3bl9aq06u3iq6aog-a/password_generator_db_0yfr
-spring.datasource.url = jdbc:postgresql://dpg-cinq0h59aq06u3j00fqg-a:5432/password_generator_db_mbag
+#spring.datasource.url = jdbc:postgresql://dpg-cinq0h59aq06u3j00fqg-a:5432/password_generator_db_mbag
 #spring.datasource.url = jdbc:postgresql://dpg-cin9bpdgkuvvgndralgg-a.ohio-postgres.render.com/password_generator_db
-spring.datasource.username = password_generator_db_mbag_user
+#spring.datasource.username = password_generator_db_mbag_user
 
-spring.datasource.password = HtQh8wsYfQmjYufrcviD1jfwhylzHWsm
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
+#spring.datasource.password = HtQh8wsYfQmjYufrcviD1jfwhylzHWsm
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.show-sql=true
 
 
 management.endpoints.web.exposure.include = health, info, copyright
