--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <start-class>com.passwordgenerator.damiangrudzien.Application</start-class>
         <flyway.version>9.10.2</flyway.version>
-        <springbootstarterdatajpa.version>3.0.1</springbootstarterdatajpa.version>
+        <springbootstarterdatajpa.version>3.1.2</springbootstarterdatajpa.version>
         <projectlombok.version>1.18.26</projectlombok.version>
     </properties>
 
@@ -42,13 +42,23 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>3.0.1</version>
+            <version>3.1.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>3.0.1</version>
+            <version>3.1.2</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>3.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>3.1.2</version>
         </dependency>
         <!--        Redis Cache    -->
         <dependency>
@@ -66,12 +76,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
-            <version>3.1.1</version>
+            <version>3.1.2</version>
         </dependency>
         <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-actuator</artifactId>
-        <version>3.0.1</version>
+        <version>3.1.2</version>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
