--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto = update
 spring.flyway.baseline-on-migrate = true
 
-spring.datasource.url = jdbc:h2:file:./src/main/resources/db.data/word_db
+spring.datasource.url = jdbc:h2:file:./src/main/resources/db/data/word_db
 spring.datasource.username = postgres
 spring.datasource.password = postgres
 spring.datasource.driver-class-name=org.h2.Driver
